--- a/OSXSaver/brevePainter-Info.plist
+++ b/OSXSaver/brevePainter-Info.plist
@@ -7,21 +7,23 @@
 	<key>CFBundleExecutable</key>
 	<string>brevePainter</string>
 	<key>CFBundleGetInfoString</key>
-	<string></string>
+	<string>brevePainter version 2.0b2</string>
 	<key>CFBundleIconFile</key>
-	<string></string>
+	<string>AppIcon.icns</string>
 	<key>CFBundleIdentifier</key>
 	<string>org.spiderland.brevePainter</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
+	<key>CFBundleName</key>
+	<string>brevePainter</string>
 	<key>CFBundlePackageType</key>
-	<string>APPL</string>
+	<string>BNDL</string>
 	<key>CFBundleShortVersionString</key>
-	<string></string>
+	<string>2.0b2</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleVersion</key>
-	<string>1.2</string>
+	<string>2.0b2</string>
 	<key>NSPrincipalClass</key>
 	<string>slBrevePainter</string>
 </dict>
